refactor: ChatMessage 관련 DTO 역할별 분리 및 답글 기능 추가를 위한 필드 추가